src/objects/EquipmentBooking__c.object
<CustomObject>
    <description>TFUS-000003992 Used to book equipment from inventory location.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account related to this booking</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipment Bookings</relationshipLabel>
        <relationshipName>Equipment_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalProducts__c</fullName>
        <description>Copied from Product Items and can be adjusted manually</description>
        <label>Additional Products</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used only for Loan equipment. Link the defect device to the request.</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Equipment Bookings</relationshipLabel>
        <relationshipName>Equipment_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingType__c</fullName>
        <description>If the loan equipment requires invoice</description>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered By Warranty/Service</fullName>
                </value>
                <value>
                    <fullName>Chargeable</fullName>
                </value>
                <value>
                    <fullName>Courtesy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BookingType__c</fullName>
        <label>Booking Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demo Equipment</fullName>
                </value>
                <value>
                    <fullName>Loan Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Equipment Bookings</relationshipLabel>
        <relationshipName>Equipment_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Equipment Bookings</relationshipLabel>
        <relationshipName>Equipment_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_2_digit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier__c</fullName>
        <description>Courier name who is responsible for shipping</description>
        <label>Courier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                    <default>true</default>
                    <label>UPS</label>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerCareAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to Customer Care Agent who is responsible for managing this equipment booking</description>
        <label>Customer Care Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Equipment_Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryDate__c</fullName>
        <description>Delivery date for equipment to customer</description>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeliveryTrackingNumber__c</fullName>
        <description>Tracking number for shipment sent to customer</description>
        <label>Delivery Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EquipmentSerialNumber__c</fullName>
        <formula>InventoryItem__r.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InventoryItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Booked Equipment</description>
        <label>Inventory Item</label>
        <referenceTo>ProductItem</referenceTo>
        <relationshipLabel>Equipment Bookings</relationshipLabel>
        <relationshipName>Equipment_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Equipment Bookings</relationshipLabel>
        <relationshipName>Equipment_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>SO/ Order number for repaired equipment</description>
        <label>Order Number (SO)</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Equipment Bookings</relationshipLabel>
        <relationshipName>Equipment_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <description>When the equipment is available in the inventory again.</description>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RepairedEquipmentSerialNumber__c</fullName>
        <description>This will be filled manually by the customer service team</description>
        <label>Repaired Equipment Serial Number</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnDate__c</fullName>
        <description>Pickup date of equipment from customer</description>
        <label>Return Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReturnTrackingNumber__c</fullName>
        <description>Tracking number for return shipment</description>
        <label>Return Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the Sales Rep who is responsible for managing this equipment booking</description>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Equipment_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#BBBBBB</color>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <color>#FFFF66</color>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                    <color>#FF9966</color>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                    <color>#78C953</color>
                    <label>Shipped</label>
                </value>
                <value>
                    <fullName>Returned</fullName>
                    <color>#CC33CC</color>
                    <label>Returned</label>
                </value>
                <value>
                    <fullName>Released</fullName>
                    <color>#0B6FCE</color>
                    <label>Released</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StreetAddress__c</fullName>
        <label>Street Address</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_BookingPeriod__c</fullName>
        <description>This field is used in PDF Butler to calculate Demo/Loan Period (Difference between Start Date and End Date)</description>
        <formula>IF(
  EndDate__c - StartDate__c &gt; 0 ,
  TEXT( FLOOR( EndDate__c - StartDate__c ) ),&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TF_Booking Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_CalendarTitle__c</fullName>
        <description>To display summary information on Calendars</description>
        <formula>Account__r.Name&amp;&quot; | &quot;&amp; Product__r.Name&amp;&quot; | &quot;&amp;EquipmentSerialNumber__c</formula>
        <label>TF_CalendarTitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <label>Equipment Booking</label>
    <listViews>
        <fullName>DACH_VDW_Customer_Care_Team_1_Submitted</fullName>
        <columns>NAME</columns>
        <columns>BookingType__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Product__c</columns>
        <columns>EquipmentSerialNumber__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>DACH: VDW Customer Care Team 1.Submitted</label>
        <language>en_US</language>
        <queue>DACH_VDW_Customer_Care_Team</queue>
        <sharedTo>
            <group>DACH_VDW_Customer_Care_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_VDW_Customer_Care_Team_2_Shipped</fullName>
        <columns>NAME</columns>
        <columns>BookingType__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Product__c</columns>
        <columns>EquipmentSerialNumber__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Shipped</value>
        </filters>
        <label>DACH: VDW Customer Care Team 2.Shipped</label>
        <language>en_US</language>
        <queue>DACH_VDW_Customer_Care_Team</queue>
        <sharedTo>
            <group>DACH_VDW_Customer_Care_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_VDW_Customer_Care_Team_3_Returned</fullName>
        <columns>NAME</columns>
        <columns>BookingType__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Product__c</columns>
        <columns>EquipmentSerialNumber__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Returned</value>
        </filters>
        <label>DACH: VDW Customer Care Team 3.Returned</label>
        <language>en_US</language>
        <queue>DACH_VDW_Customer_Care_Team</queue>
        <sharedTo>
            <group>DACH_VDW_Customer_Care_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_VDW_Customer_Care_Team_4_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>BookingType__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Product__c</columns>
        <columns>EquipmentSerialNumber__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>DACH: VDW Customer Care Team 4.Cancelled</label>
        <language>en_US</language>
        <queue>DACH_VDW_Customer_Care_Team</queue>
        <sharedTo>
            <group>DACH_VDW_Customer_Care_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EB-{000000000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Bookings</pluralLabel>
    <recordTypes>
        <fullName>EquipmentBooking</fullName>
        <active>true</active>
        <description>Book an equipment for Demo or Loan purposes</description>
        <label>Equipment Booking</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Product_must_match_Inventory_Item</fullName>
        <active>true</active>
        <description>The product and the product of inventory item must match</description>
        <errorConditionFormula>Product__c != InventoryItem__r.Product2Id 

&amp;&amp;

TEXT(Status__c) !=&quot;Submitted&quot;

&amp;&amp;


TEXT(Status__c) !=&quot;Cancelled&quot;</errorConditionFormula>
        <errorDisplayField>InventoryItem__c</errorDisplayField>
        <errorMessage>The inventory item doesn&apos;t match the requested product. Or, you must have an inventory item assigned for this status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Release_Date_Must_Be_Blanked</fullName>
        <active>true</active>
        <description>If the user change status back from Released to other status, the Release date must be blanked manually.</description>
        <errorConditionFormula>Text(Status__c)!=&quot;Released&quot;

&amp;&amp;

Not(ISNULL(ReleaseDate__c))

&amp;&amp;

Text(Status__c)!=&quot;Cancelled&quot;</errorConditionFormula>
        <errorDisplayField>ReleaseDate__c</errorDisplayField>
        <errorMessage>Please remove the Release Date before change the status to something else.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_For_Returned</fullName>
        <active>true</active>
        <description>Fields must be filled when the status is changed to Returned</description>
        <errorConditionFormula>IsPickval(Status__c,&quot;Returned&quot;)
&amp;&amp;
(
ISBLANK( ReturnDate__c)
||
ISBLANK(InventoryItem__c)
)</errorConditionFormula>
        <errorMessage>To Change the status to Returned, you must fill in Return Date, and Inventory Item must be assigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_For_Shipped</fullName>
        <active>true</active>
        <description>Fields must be filled when the status is changed to Shipped</description>
        <errorConditionFormula>IsPickval(Status__c,&quot;Shipped&quot;)
&amp;&amp;
(
ISBLANK(DeliveryDate__c)
||
ISBLANK(InventoryItem__c)
)</errorConditionFormula>
        <errorMessage>To Change the status to Shipped, you must fill in Delivery Date, and Inventory Item must be assigned.</errorMessage>
    </validationRules>
</CustomObject>